k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kindbytes-web
  labels: {app.kubernetes.io/name: kindbytes, app.kubernetes.io/component: web}
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels: {app.kubernetes.io/name: kindbytes, app.kubernetes.io/component: web}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  template:
    metadata:
      labels: {app.kubernetes.io/name: kindbytes, app.kubernetes.io/component: web}
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: web
          image: ghcr.io/sameershaik2710/kindbytes:1.0.0
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet: {path: /readyz, port: http}
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests: {cpu: 100m, memory: 192Mi}
            limits: {cpu: 500m, memory: 384Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: ["ALL"]}
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kindbytes-web
  labels: {app.kubernetes.io/name: kindbytes, app.kubernetes.io/component: web}
spec:
  selector: {app.kubernetes.io/name: kindbytes, app.kubernetes.io/component: web}
  ports:
    - name: http
      port: 80
      targetPort: http
